# edgeml-precompile-poc

./: Cargo.toml  fastly.toml
.cargo/: config.toml
docs/: script.js
src/: log.rs  main.rs  ml.rs
static-host/: Cargo.toml  fastly.toml
