[package]
name = "edgeml"
version = "0.2.0"
authors = []
edition = "2018"

[profile.release]
opt-level = 's'
lto = true

[dependencies]
fastly = "0.10.1"
# don't fancy tensorflow? Try: tract-kaldi, tract-onnx, tract-nnef 
tract_flavour = { package = "tract-onnx", version = "0.21.5" }
image = { version = "0.25.1", default-features = false, features = ["jpeg"] }
rand = "0.8.3"
once_cell = "1.19.0"
